2001-01-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* router/functions.c:
	    Condition "no such user" can be signaled with   getpwnam()
	    yielding NULL and errno == 0.  Not only   errno == ENOENT.

	* lib/dbpwdgrp.c, lib/nobody.c, lib/pwdgrp.c, lib/trusted.c,
	  router/daemonsub.c, router/functions.c, router/router.c,
	  transports/mailbox/mailbox.c:
	    Essentially in front of *every*  getpwnam(),  do place
	    explicite clear of   errno  variable.
	    Apparently at Solaris 2.6 it isn't cleared/set quite always
	    when doing error paths...

2001-01-15  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/mailbox/mailbox.c:
	    Typo -- mmfd_mode which should be  mmdf_mode ...

	* transports/libta/diagnostic.c:
	    #include <errno.h> -- apparently cc at Solaris 2.6
	    didn't like it without :-/

	* smtpserver/smtpserver.h, smtpserver/cfgread.c:
	    More Sol26/SunSoft CC things.

	* lib/rfc822scan.c:
	    Recognize  "HOST::USER"@decnet-IV.gw  syntax,
	    and don't ever unquote it.  We don't support
	    being the DECNET-IV gateway ourselves.

	* proto/zmailer.sh.in:
	    If  dbases.conf  is not in use, and we execute
	    'zmailer newdb', do 'newdb' the $MAILSHARE/db/mboxmap
	    also.

2000-12-31  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/mailbox/mailbox.c:
	    At normal success path, do proper  fsync(2)  return
	    status analysis - if the filesystem where the write
	    goes to is ever truly asynchronous, the only way to
	    know if it runs out of diskspace, or whatever is after
	    the return of fsync(2).

	* libc/mail.c, libc/sfmail.c, scheduler/msgerror.c,
	  router/rfc822.c, transports/libta/diagnostic.c:
	    More of carefull  fsync(2)  calls.

	* transports/mailbox/mailbox.c, smtpserver/smtpcmds.c,
	  transports/libta/diagnostic.c:
	    Also carefull wrappers for  ftruncate(2)  calls.

2000-12-30  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/libta/mimeheaders.c: